@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 2.6)
+PROJECT(copy_files)
 
 SET(ALL_FILES)
 copy_single_file(ALL_FILES license.txt .)
@@ -8,5 +9,5 @@ copy_single_file(ALL_FILES counters.defs .)
 copy_single_file(ALL_FILES nsclient.dist .)
 copy_single_file(ALL_FILES ../changelog .)
 
-ADD_CUSTOM_TARGET(copy_files DEPENDS ${ALL_FILES})
+ADD_CUSTOM_TARGET(copy_files ALL DEPENDS ${ALL_FILES})
 SET_TARGET_PROPERTIES(copy_files PROPERTIES FOLDER "files")
